--- a/package.json
+++ b/package.json
@@ -1,17 +1,9 @@
 {
   "name": "pt",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "version": "1.0.0",
+  "description": "Personal Portfolio Website",
+  "main": "index.html",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "vite": "^5.0.12"
-  },
-  "devDependencies": {
-    "@vitejs/plugin-react": "^4.2.1"
+    "start": "serve"
   }
 }
