--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "builds": [
     {
-      "src": "package.json",
+      "src": "index.html",
       "use": "@vercel/static-build"
     }
   ],
@@ -11,5 +11,8 @@
       "src": "/(.*)",
       "dest": "/index.html"
     }
+  ],
+  "staticDirectories": [
+    "static"
   ]
 }
